# ristretto

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md  V02_PLAN.md  V03_TAURI_PLAN.md
.github/workflows/: ci.yml
examples/: channel.toml  mcp-config.json
rist/: Cargo.toml
rist-app/: CODEX_TASK.md  index.html  package-lock.json  package.json  vite.config.ts
rist-app/src/: App.tsx  styles.css
rist-app/src-tauri/: Cargo.toml  tauri.conf.json
rist-app/src-tauri/src/: daemon.rs  lib.rs  main.rs  pty.rs
rist-app/src/components/: ActivityFeed.tsx  AgentBar.tsx  AgentCards.tsx  AgentContextMenu.tsx  AgentView.tsx  CommandCard.tsx  CommandPalette.tsx  DagNode.tsx  DagPanel.tsx  DiffViewer.tsx  ErrorCard.tsx  MergePanel.tsx  RawTerminal.tsx  SettingsPanel.tsx  StatusBar.tsx  TestResults.tsx
rist-app/src/hooks/: use-daemon.ts  use-keyboard.ts
rist-app/src/lib/: output-parser.ts  types.ts
rist-app/src/stores/: agent-store.ts
rist-channel/: Cargo.toml
rist-channel/src/: event_router.rs  formatters.rs  lib.rs  main.rs  transports.rs
rist-mcp/: Cargo.toml
rist-mcp/src/: main.rs  tools.rs
rist-shared/: Cargo.toml
rist-shared/locales/: en.toml  zh-CN.toml  zh-TW.toml
rist-shared/src/: i18n.rs  lib.rs  protocol.rs  types.rs
rist/src/: app.rs  daemon_client.rs  event.rs  lib.rs  main.rs  ui.rs
ristd/: Cargo.toml
ristd/src/: agent_adapter.rs  context_injector.rs  context_monitor.rs  file_ownership.rs  git_manager.rs  handoff.rs  hooks.rs  lib.rs  main.rs  output_filter.rs  planner.rs  pty_manager.rs  recovery.rs  review_engine.rs  ring_buffer.rs  session_store.rs  socket_server.rs
ristd/tests/: socket_server.rs
