[workspace]
members = ["ristd", "rist", "rist-mcp", "rist-channel", "rist-shared"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
chrono = { version = "=0.4.42", features = ["serde"] }
clap = { version = "=4.5.39", features = ["derive", "env"] }
crossterm = "=0.28.1"
git2 = "=0.20.2"
nix = { version = "=0.30.1", features = ["fs", "process", "signal"] }
portable-pty = "=0.9.0"
ratatui = "=0.29.0"
rust-i18n = "=3.1.5"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
tempfile = "=3.23.0"
tokio = { version = "=1.47.1", features = ["full"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter", "fmt"] }
unicode-width = "=0.2.0"
uuid = { version = "=1.18.1", features = ["serde", "v4"] }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

