[package]
name = "rist-channel"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
rist = { path = "../rist" }
rist-shared = { path = "../rist-shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml = "0.8.23"

[dev-dependencies]
tempfile.workspace = true
uuid.workspace = true

[lints]
workspace = true
