[package]
name = "rist-channel"
description = "Event fan-out service for routing Ristretto daemon events to files, MCP, and webhooks"
edition.workspace = true
version.workspace = true
license = "MIT"
repository = "https://github.com/jzOcb/ristretto"
homepage = "https://github.com/jzOcb/ristretto"
keywords = ["events", "ai", "agents", "orchestration", "webhook"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono.workspace = true
clap.workspace = true
rist = { path = "../rist" }
rist-shared = { path = "../rist-shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml = "0.8.23"

[dev-dependencies]
tempfile.workspace = true
uuid.workspace = true

[lints]
workspace = true
