[package]
name = "rist-mcp"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
rist = { path = "../rist" }
rist-shared = { path = "../rist-shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
portable-pty.workspace = true
ristd = { path = "../ristd" }
tempfile.workspace = true

[lints]
workspace = true
