[package]
name = "rist-mcp"
description = "Model Context Protocol server for controlling Ristretto agent sessions"
edition.workspace = true
version.workspace = true
license = "MIT"
repository = "https://github.com/jzOcb/ristretto"
homepage = "https://github.com/jzOcb/ristretto"
keywords = ["mcp", "ai", "agents", "orchestration", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono.workspace = true
rist = { path = "../rist" }
rist-shared = { path = "../rist-shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
portable-pty.workspace = true
ristd = { path = "../ristd" }
tempfile.workspace = true

[lints]
workspace = true
