[package]
name = "rist-shared"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "rist_shared"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
rust-i18n.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true

