[package]
name = "rist-shared"
description = "Shared protocol types, localization, and utilities for the Ristretto workspace"
edition.workspace = true
version.workspace = true
license = "MIT"
repository = "https://github.com/jzOcb/ristretto"
homepage = "https://github.com/jzOcb/ristretto"
keywords = ["ai", "agents", "orchestration", "protocol", "i18n"]
categories = ["development-tools", "internationalization"]

[lib]
name = "rist_shared"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
rust-i18n.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
