[package]
name = "rist"
description = "Terminal-native TUI for supervising parallel Ristretto agent sessions"
edition.workspace = true
version.workspace = true
license = "MIT"
repository = "https://github.com/jzOcb/ristretto"
homepage = "https://github.com/jzOcb/ristretto"
keywords = ["ai", "agents", "orchestration", "terminal", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
rist-shared = { path = "../rist-shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
