[package]
name = "ristd"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
git2.workspace = true
nix.workspace = true
portable-pty.workspace = true
rist-shared = { path = "../rist-shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

