[package]
name = "ristd"
description = "Daemon for multi-agent orchestration, worktree isolation, and recovery in Ristretto"
edition.workspace = true
version.workspace = true
license = "MIT"
repository = "https://github.com/jzOcb/ristretto"
homepage = "https://github.com/jzOcb/ristretto"
keywords = ["ai", "agents", "orchestration", "daemon", "git"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono.workspace = true
clap.workspace = true
git2.workspace = true
nix.workspace = true
portable-pty.workspace = true
rist-shared = { path = "../rist-shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
