[package]
name = "rist-app"
version = "0.3.0"
description = "Ristretto desktop operations center"
authors = ["OpenClaw"]
edition = "2021"

[lib]
name = "rist_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
dirs = "5.0.1"
rist-shared = { path = "../../rist-shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
